--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@emotion/styled": "^11.11.5",
         "@mui/material": "^5.15.15",
         "@tanstack/react-query": "^5.28.14",
+        "@tanstack/react-query-devtools": "^5.50.1",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
