--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,9 @@
             }
         ],
         "no-shadow": "off",
-        "@typescript-eslint/no-shadow": ["error"]
+        "@typescript-eslint/no-shadow": ["error"],
+        "import/no-extraneous-dependencies": "off",
+        "react/require-default-props": "off"
     },
     "settings": {
         "import/resolver": {
