--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "React App",
-    "name": "Create React App Sample",
+    "short_name": "BookNook",
+    "name": "BookNook 나만의 독서 기록 서비스",
     "icons": [
         {
             "src": "favicon.ico",
@@ -8,12 +8,12 @@
             "type": "image/x-icon"
         },
         {
-            "src": "logo192.png",
+            "src": "booknook-logo.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "logo512.png",
+            "src": "booknook-logo.png",
             "type": "image/png",
             "sizes": "512x512"
         }
